2001-12-26  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>

	* [w3m-dev 02732] fix Debian Bug#126381
	  		- Passwords entered for HTTPS are used for HTTP
	* etc.c (find_auth): add port arg
	* etc.c (find_auth_cookie): add port arg
	* etc.c (add_auth_cookie): add port arg
	* file.c (getAuthCookie): find_auth_cookie(host, port, realm)
	* file.c (loadGeneralFile): add_auth_cookie(host, port, realm, ss)
	* fm.h (struct auth_cookie): add port
	* ftp.c (openFTP): find_auth_cookie(host, port, user)
	* ftp.c (openFTP): add_auth_cookie(host, port, user, pwd)
	* proto.h (find_auth_cookie): add port
	* proto.h (add_auth_cookie): add port

2001-12-26  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02729]
	* doc-jp/README.func (DOWNLOAD): update
	* doc-jp/README.func (EDIT): ditto
	* doc-jp/README.func (EDIT_SCREEN): ditto
	* doc-jp/README.func (SAVE): ditto
	* doc/README.func (DOWNLOAD): ditto
	* doc/README.func (SAVE): ditto
	* doc/README.func (SUBMIT): ditto
	* scripts/w3mhelp.cgi.in: $key is normalized by &norm_key
	* scripts/w3mhelp.cgi.in: keyfunc update
	* scripts/w3mhelp.cgi.in (load_keymap): check data, &norm_key
	* scripts/w3mhelp.cgi.in (norm_key): added

2001-12-26  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [#496613] LASTLINE in terms.c
	   by Kazuhiro NISHIYAMA (znz)
	* terms.c (LASTLINE): defined(__CYGWIN__) instead of defined(CYGWIN)
	* terms.c (setlinescols): ditto

2001-12-26  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [#496610] #include <sys/wait.h>
	   by Kazuhiro NISHIYAMA (znz)
	* main.c: #if defined(HAVE_WAITPID) || defined(HAVE_WAIT3)
	* etc.c: ditto
	* file.c: ditto

2001-12-26  Kazuhiro NISHIYAMA <zn@mbf.nifty.com>

	* [w3m-dev 02725] bcopy, bzero
	* etc.c (bcopy): deleted
	* etc.c (bzero): deleted
	* indep.c (bcopy): added
	* indep.c (bzero): added
	* indep.c (bcopy): src should be const
	* fm.h (bcopy): ditto

2001-12-25  Kazuhiko <kazuhiko@archi.kyoto-u.ac.jp>
	
	* [w3m-dev 02727]
	* doc-jp/keymap.default (C-r): ISEARCH_BACK